--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@ __pycache__/
 *.pyc
 venv/
 combined_sports.csv
+.venv/
+__pycache__/
+*.pyo
+.DS_Store
+*.log
+*.sqlite3
+*.db
+*.egg-info/
+node_modules/
+dist/
+build/
+NBADataset.csv
