--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ numpy==1.26.4
 pyyaml==6.0.2    
 python-dotenv==1.0.1 
 requests==2.32.3
+transformers==4.56.1
+fastapi==0.116.1 
+uvicorn==0.35.0
+torch==2.8.0
