--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,12 +47,28 @@ services:
     volumes:
       - sportpulse_postgres_data:/var/lib/postgresql/data
 
+  mongodb:
+    image: mongo:7.0
+    container_name: sportpulse-mongodb
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: mongouser
+      MONGO_INITDB_ROOT_PASSWORD: mongopass
+      MONGO_INITDB_DATABASE: sportpulse_db
+    ports:
+      - "27017:27017"
+    networks:
+      - app-network
+    volumes:
+      - sportpulse_mongodb_data:/data/db
+
   spark-app:
     image: bitnami/spark:3.5.0
     container_name: sportpulse-spark-app
     depends_on:
       - kafka
       - postgres
+      - mongodb
     environment:
       SPARK_MODE: client
       KAFKA_BROKERS_DOCKER: "kafka:29092"
@@ -60,6 +76,11 @@ services:
       POSTGRES_DB: "sparkdb"
       POSTGRES_USER: "sparkuser"
       POSTGRES_PASSWORD: "sparkpass"
+      MONGODB_HOST: "mongodb"
+      MONGODB_PORT: "27017"
+      MONGODB_USER: "mongouser"
+      MONGODB_PASSWORD: "mongopass"
+      MONGODB_DATABASE: "sportpulse_db"
       SPARK_DRIVER_MEMORY: 4g
       SPARK_EXECUTOR_MEMORY: 4g
     volumes:
@@ -68,6 +89,7 @@ services:
       - ./.env:/app/.env
       - ./requirements.txt:/app/requirements.txt
       - ./spark-batch-processing:/app/spark-batch-processing
+      - ./stream_processing:/app/stream_processing
     command: >
       sh -c "pip install --no-cache-dir -r /app/requirements.txt && tail -f /dev/null"
     networks:
@@ -79,3 +101,4 @@ networks:
 
 volumes:
   sportpulse_postgres_data:
+  sportpulse_mongodb_data:
